tests/specs/namespace_details.txt
# mod.ts
export namespace Namespace {
  /**
   * Doc comment 1
   *
   * Details 1
   */
  export function a() {}
  /**
   * Doc comment 2
   *
   * Details 2
   */
  export class B {}
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export namespace Namespace {
  | ^

# output.txt
Defined in file:///mod.ts:1:1

namespace Namespace

  function a(): void
    Doc comment 1
    
    Details 1
  class B
    Doc comment 2
    
    Details 2


# output.json
[
  {
    "name": "Namespace",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "kind": "namespace",
    "namespaceDef": {
      "elements": [
        {
          "name": "a",
          "isDefault": false,
          "location": {
            "filename": "file:///mod.ts",
            "line": 7,
            "col": 2,
            "byteIndex": 82
          },
          "declarationKind": "export",
          "jsDoc": {
            "doc": "Doc comment 1\n\nDetails 1"
          },
          "kind": "function",
          "functionDef": {
            "params": [],
            "returnType": {
              "repr": "void",
              "kind": "keyword",
              "keyword": "void"
            },
            "hasBody": true,
            "isAsync": false,
            "isGenerator": false,
            "typeParams": []
          }
        },
        {
          "name": "B",
          "isDefault": false,
          "location": {
            "filename": "file:///mod.ts",
            "line": 13,
            "col": 2,
            "byteIndex": 158
          },
          "declarationKind": "export",
          "jsDoc": {
            "doc": "Doc comment 2\n\nDetails 2"
          },
          "kind": "class",
          "classDef": {
            "isAbstract": false,
            "constructors": [],
            "properties": [],
            "indexSignatures": [],
            "methods": [],
            "extends": null,
            "implements": [],
            "typeParams": [],
            "superTypeParams": []
          }
        }
      ]
    }
  }
]
